force-app/main/default/objects/Daily_Workout__c/Daily_Workout__c.object-meta.xml
<CustomObject>
    <label>Daily Workout</label>
    <nameField>
        <displayFormat>ID-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Workouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>