force-app/main/default/objects/Daily_Workout__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Daily Workouts</relationshipLabel>
    <relationshipName>Daily_Workouts</relationshipName>
    <type>Lookup</type>
</CustomField>