force-app/main/default/objects/Daily_Workout__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <formula>Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Name</label>
    <type>Text</type>
</CustomField>