force-app/main/default/objects/Daily_Workout__c/fields/Reps__c.field-meta.xml
<CustomField>
    <fullName>Reps__c</fullName>
    <label>Reps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>