force-app/main/default/objects/Daily_Workout__c/fields/Rest_Time__c.field-meta.xml
<CustomField>
    <fullName>Rest_Time__c</fullName>
    <label>Rest Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>