force-app/main/default/objects/Daily_Workout__c/fields/Sets__c.field-meta.xml
<CustomField>
    <fullName>Sets__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>