force-app/main/default/objects/Daily_Workout__c/fields/Sets_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sets_Completed__c</fullName>
    <label>Sets Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>