force-app/main/default/objects/Daily_Workout__c/fields/Workout_Date__c.field-meta.xml
<CustomField>
    <fullName>Workout_Date__c</fullName>
    <label>Workout Date</label>
    <type>Date</type>
</CustomField>