force-app/main/default/objects/Daily_Workout__c/fields/Workout_Day__c.field-meta.xml
<CustomField>
    <fullName>Workout_Day__c</fullName>
    <label>Workout Day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>